# blatt-7-aufgabe-1-teamich

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
avlTree/: CMakeLists.txt  avlTree.cpp  avlTree.h
test/: CMakeLists.txt  testAvlTree.cpp  testAvlTree.h
